--- a/servlet2/src/view/screen/html/main.twig
+++ b/servlet2/src/view/screen/html/main.twig
@@ -1,10 +1,8 @@
 {% spaceless %}
-
-head
+{% include 'vondirheader.twig' %}
 
 
 				{% block main_content %}{% endblock %}
 
-foot
-
+	{% include 'vondirfooter.twig' %}
 {% endspaceless %}
