--- a/servlet2/src/view/screen/html/maintemplate.twig
+++ b/servlet2/src/view/screen/html/maintemplate.twig
@@ -1,8 +1,7 @@
 {% spaceless %}
-{% include 'vondirheader.twig' %}
-
+{% include 'mainheader.twig' %}
 
 				{% block main_content %}{% endblock %}
 
-	{% include 'vondirfooter.twig' %}
+	{% include 'mainfooter.twig' %}
 {% endspaceless %}
